Error de las imágenes y texto arreglado.

--- a/style.css
+++ b/style.css
@@ -30,5 +30,10 @@ p, li {
 
 .equipo {
     width: 350px;
+}
+
+.bloque-imagen {
+    width: fit-content;
+    text-align: center;
     margin: 10px;
 }
